kermeta_projects/fr.irisa.triskell.kermeta.io/src/test/resources/constraintchecker_tests/invalid/027_constraint_type_boolean3.kmt
/* $Id: 027_constraint_type_boolean3.kmt,v 1.1 2007-09-10 08:35:12 cfaucher Exp $
 * Creation date: August 6, 2007
 * License:
 * Copyright:
 * Authors:
 */
@mainClass "root_package::Main"
@mainOperation "main"


package root_package;


require kermeta
class Main
{
	operation main() : Void
	is do 
		
	end
	
	inv linv is do end
}